test/sema/traits/struct_field_trait_mismatch.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {}

struct S<T : A> {
  x: T
}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:17: error: cannot satisfy constraint 'number : A'
  let s = S{ x: 0 };
}
